--- a/jornal-diario/backend/package.json
+++ b/jornal-diario/backend/package.json
@@ -4,6 +4,7 @@
   "main": "middleware.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js"
   },
   "keywords": [],
   "author": "",
